@@ -43,6 +43,8 @@ if %JMX_LOCAL% == "false" (
   echo "setting local JMX..."
 )
 
+set IOTDB_JMX_OPTS=%IOTDB_JMX_OPTS% -Diotdb.jmx.local=%JMX_LOCAL%
+
 for /f %%b in ('wmic cpu get numberofcores ^| findstr "[0-9]"') do (
 	set system_cpu_cores=%%b
 )
@@ -77,29 +79,15 @@ if %desired_yg_in_mb% GTR %max_sensible_yg_in_mb% (
 	set HEAP_NEWSIZE=%max_sensible_yg_in_mb%M
 ) else set HEAP_NEWSIZE=%desired_yg_in_mb%M
 
+@REM if the heap size is larger than 16GB, we will forbid writing the heap dump file
+if %desired_yg_in_mb% GTR 16384 (
+	set IOTDB_ALLOW_HEAP_DUMP="false"
+) else set IOTDB_ALLOW_HEAP_DUMP="true"
+
 @REM Maximum heap size
 @REM set MAX_HEAP_SIZE="2G"
 @REM Minimum heap size
 @REM set HEAP_NEWSIZE="2G"
-
-IF ["%IOTDB_HEAP_OPTS%"] EQU [""] (
-	rem detect Java 8 or 11
-	IF "%JAVA_VERSION%" == "8" (
-		java -d64 -version >nul 2>&1
-		set IOTDB_HEAP_OPTS=-Xmx%MAX_HEAP_SIZE% -Xms%HEAP_NEWSIZE% -Xloggc:"%IOTDB_HOME%\gc.log" -XX:+PrintGCDateStamps -XX:+PrintGCDetails
-		goto end_config_setting
-	) ELSE (
-		goto detect_jdk11_bit_version
-	)
-)
-
-:detect_jdk11_bit_version
-for /f "tokens=1-3" %%j in ('java -version 2^>^&1') do (
-	@rem echo %%j
-	@rem echo %%k
-	@rem echo %%l
-	set BIT_VERSION=%%l
-)
 
 @REM maximum direct memory size
 set MAX_DIRECT_MEMORY_SIZE=%MAX_HEAP_SIZE%
@@ -111,14 +99,13 @@ set temp_buffer_pool_size=1024
 @REM which equals DIRECT_MEMORY_SIZE / threads_number / temp_buffer_pool_size
 set MAX_CACHED_BUFFER_SIZE=%max_heap_size_in_mb%*1024*1024/%threads_number%/%temp_buffer_pool_size%
 
-set IOTDB_HEAP_OPTS=-Xmx%MAX_HEAP_SIZE% -Xms%HEAP_NEWSIZE% -Xlog:gc:"%IOTDB_HOME%\gc.log"
+set IOTDB_HEAP_OPTS=-Xmx%MAX_HEAP_SIZE% -Xms%HEAP_NEWSIZE%
 set IOTDB_HEAP_OPTS=%IOTDB_HEAP_OPTS% -XX:MaxDirectMemorySize=%MAX_DIRECT_MEMORY_SIZE%
 set IOTDB_HEAP_OPTS=%IOTDB_HEAP_OPTS% -Djdk.nio.maxCachedBufferSize=%MAX_CACHED_BUFFER_SIZE%
 
 @REM You can put your env variable here
 @REM set JAVA_HOME=%JAVA_HOME%
 
-:end_config_setting
 @REM set gc log.
 IF "%1" equ "printgc" (
 	IF "%JAVA_VERSION%" == "8" (
